@@ -229,9 +229,9 @@ function print_usage() {
     echo "  -s <dir>      Sets the solr.solr.home system property; Solr will create core directories under"
     echo "                  this directory. This allows you to run multiple Solr instances on the same host"
     echo "                  while reusing the same server directory set using the -d parameter. If set, the"
-    echo "                  specified directory should contain a solr.xml file. The default value is server/solr."
+    echo "                  specified directory should contain a solr.xml file, unless solr.xml exists in ZooKeeper."
     echo "                  This parameter is ignored when running examples (-e), as the solr.solr.home depends"
-    echo "                  on which example is run."
+    echo "                  on which example is run. The default value is server/solr."
     echo ""
     echo "  -e <example>  Name of the example to run; available examples:"
     echo "      cloud:         SolrCloud example"
@@ -1216,10 +1216,6 @@ if [ ! -e "$SOLR_HOME" ]; then
   echo -e "\nSolr home directory $SOLR_HOME not found!\n"
   exit 1
 fi
-if [ ! -e "$SOLR_HOME/solr.xml" ]; then
-  echo -e "\nSolr home directory $SOLR_HOME must contain a solr.xml file!\n"
-  exit 1
-fi
 
 # backup the log files before starting
 if [ -f "$SOLR_LOGS_DIR/solr.log" ]; then
@@ -1281,6 +1277,11 @@ if [ "$SOLR_MODE" == 'solrcloud' ]; then
     CLOUD_MODE_OPTS+=('-Dbootstrap_confdir=./solr/collection1/conf' '-Dcollection.configName=myconf' '-DnumShards=1')
   fi
     
+else
+  if [ ! -e "$SOLR_HOME/solr.xml" ]; then
+    echo -e "\nSolr home directory $SOLR_HOME must contain a solr.xml file!\n"
+    exit 1
+  fi
 fi
 
 # These are useful for attaching remote profilers like VisualVM/JConsole
